# youtube_downloader

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  analyze_test_results.py  docker-compose.yml  examine_redis_hash.py  fix_duplicates.py  main.py  pyproject.toml  readme.md  redis_audio_integrity_test.py  redis_detailed_inspection.py  redis_inspection.py  redis_performance_demo.py  run.sh  run_96h_continuous_validation.py  run_fase3_complete_validation.py  simple_redis_check.py  start_intensive_monitoring.py  sync_redis_filesystem.py  test_audio_stream.py  test_download_fix.py  test_fase3_complete_validation.py  test_fase3_implementation.py  test_fase3_simple.py  test_monitoring_system.py  test_redis_resilience.py  test_single_video.py  test_validation_system.py  test_ytdlp_configurations.py  test_ytdlp_direct.py  test_ytdlp_fix.py  validate_performance.py  video_downloader.py
.claude/: settings.local.json
.old/: cleanup_mappings.py  response.json  video_downloader.py
.old/downloaders/: instagram.py  youtube_pytube.py
.old/youtube-downloader/: App.tsx  CLAUDE.md  babel.config.js  readme.md
app/api/: dashboard_endpoints.py  redis_endpoints.py  sse_integration.py  websocket_progress.py
app/core/: __init__.py  logging.py
app/db/: __init__.py  database.py  models.py  repositories.py
app/middleware/: redis_fallback.py
app/models/: audio.py  folder.py  video.py
app/services/: advanced_progress_manager.py  api_performance_monitor.py  configs.py  download_queue.py  download_tracker.py  files.py  hybrid_mode_manager.py  integration_patch.py  locks.py  managers.py  progress_dashboard.py  progress_metrics_collector.py  redis_audio_manager.py  redis_connection.py  redis_files_adapter.py  redis_managers_adapter.py  redis_notifications.py  redis_progress_manager.py  redis_system_init.py  redis_video_manager.py  securities.py  sse_manager.py  sse_redis_adapter.py
app/uwtv/: main.py
app/web_client/: index.html
data/: audios.json  videos.json  youtube_downloader.db
docs/: API.md  ARCHITECTURE.md  DATABASE.md  INDEX.md  README.md  SERVICES.md
docs/plans/: 2026-04-01-youtube-cookie-auth.md  2026-04-28-playlist-download.md  2026-05-04-frontend-redesign.md  2026-05-13-instagram-support.md  2026-05-13-s3-storage-backend.md
downloaders/: abstracts.py  youtube_ytdlp.py
monitoring/: __init__.py  alert_system.py  application_metrics.py  intensive_monitoring_scheduler.py  monitoring_dashboard.py  performance_optimizer.py  production_monitoring.py  redis_monitor.py
new_design/: loop-proposal.html
new_design/components/: screens-1.jsx  screens-2.jsx  shared.jsx
new_design/styles/: system.css
notebooks/: testes.ipynb
optimization/: __init__.py  performance_optimizer.py
reports/: pytest_report.html  test_summary.md
scripts/: cutover_health_checker.py  cutover_rollback_manager.py  data_integrity_verifier.py  data_recovery_system.py  emergency_rollback_system.py  execute_production_cutover_final.py  final_system_validator.py  json_elimination_manager.py  master_migration_orchestrator.py  migrate_json_to_redis.py  migration_backup_system.py  performance_benchmark.py  production_cutover_executor.py  production_migration_orchestrator.py  redis_data_migration.py  redis_monitor.py  redis_system_monitor.py  reindex_playlist.py  run_tests.py  test_redis_integration.py  validate_redis_implementation.py
static/css/: dashboard.css
static/js/: dashboard.js  progress_client.js
templates/: progress_dashboard.html
tests/: __init__.py  conftest.py
tests/api/: test_playlist_endpoints.py  test_transcription_concurrency.py
tests/failover/: __init__.py  test_redis_fallback_recovery.py
tests/integration/: __init__.py  test_fase3_complete_integration.py  (+1 more)
uwtv/: main.py  managers.py
validation/: README.md  __init__.py  continuous_validation_manager.py  data_integrity_validator.py  error_rate_validator.py  performance_validator.py  user_experience_validator.py  validation_dashboard.py  validation_reporter.py
web_client/: index.html
youtube-downloader/: App.tsx  CLAUDE.md  app.json  package-lock.json  package.json
(+87 files in other folders)
