[tool.poetry]
name = "youtube-downloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "youtube_downloader"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytube = "^15.0.0"
pywebio = "^1.8.2"
instaloader = "^4.10"
pyinstaller = "^5.13.2"
yt-dlp = "^2024.11.18"
browser-cookie3 = "^0.19.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-multipart = "^0.0.17"
pyjwt = "^2.10.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
loguru = "^0.7.2"
aiohttp = "^3.11.8"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
