[project]
name = "youtube-downloader"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "pytube>=15.0.0",
    "pywebio>=1.8.2",
    "instaloader>=4.10",
    "pyinstaller>=5.13.2",
    "yt-dlp>=2024.11.18",
    "browser-cookie3>=0.19.1",
    "fastapi>=0.115.5",
    "uvicorn>=0.32.1",
    "python-multipart>=0.0.17",
    "pyjwt>=2.10.0",
    "python-jose[cryptography]>=3.3.0",
    "loguru>=0.7.2",
    "aiohttp>=3.11.8",
    "python-dotenv>=1.0.1",
    "langchain-community>=0.3.21",
    "groq>=0.22.0",
    "pydub>=0.25.1",
    "sse-starlette>=2.1.3",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "langchain>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
]

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
